--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
         <!-- <link rel="stylesheet" href="jasmine/lib/jasmine-2.1.2/jasmine.css"> -->
 
-        <script src="js/app.js"></script>
         <!-- <script src="jasmine/lib/jasmine-2.1.2/jasmine.js"></script>
         <script src="jasmine/lib/jasmine-2.1.2/jasmine-html.js"></script>
         <script src="jasmine/lib/jasmine-2.1.2/boot.js"></script> -->
     </head>
     <body>
     	<header class="click-count"></header>
-        <img class="hero" alt="random-cat"/>
+        <img src="#" id="catpicture" width="400px" height="400px">
+        <script src="js/app.js"></script>
     </body>
 </html>
