--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Cat Clicker</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Cat Clicker</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700">
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700">
 
-        <!-- <link rel="stylesheet" href="css/style.css"> -->
+		<!-- <link rel="stylesheet" href="css/style.css"> -->
 
-        <!-- <link rel="stylesheet" href="jasmine/lib/jasmine-2.1.2/jasmine.css"> -->
+		<!-- <link rel="stylesheet" href="jasmine/lib/jasmine-2.1.2/jasmine.css"> -->
 
-        <!-- <script src="jasmine/lib/jasmine-2.1.2/jasmine.js"></script>
-        <script src="jasmine/lib/jasmine-2.1.2/jasmine-html.js"></script>
-        <script src="jasmine/lib/jasmine-2.1.2/boot.js"></script> -->
-    </head>
-    <body>
-    	<header class="click-count"></header>
-        <img src="#" id="catpicture" width="400px" height="400px">
-        <script src="js/app.js"></script>
-    </body>
+		<!-- <script src="jasmine/lib/jasmine-2.1.2/jasmine.js"></script>
+
+		<script src="jasmine/lib/jasmine-2.1.2/jasmine-html.js"></script>
+		<script src="jasmine/lib/jasmine-2.1.2/boot.js"></script> -->
+	</head>
+	<body>
+		<span id="list-container">
+			<ul id="cat-list"></ul>
+		</span>
+		<span id="viewer">
+			<div id="cat">
+				<h2 id="cat-name"></h2>
+				<div id="cat-count"></div>
+				<img id="cat-img" src="" alt="cute cat"></img>
+			</div>
+		</span>
+		<script src="js/app.js"></script>
+	</body>
 </html>
