--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div id="cat">
 				<h2 id="cat-name"></h2>
 				<div id="cat-count"></div>
-				<img id="cat-img" src="" alt="cute cat"></img>
+				<img id="cat-img" src="" alt="cute cat">
 			</div>
 		</span>
 		<script src="js/app.js"></script>
