--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700">
 
-		<!-- <link rel="stylesheet" href="css/style.css"> -->
+		<link rel="stylesheet" href="css/styles.css">
 
 		<!-- <link rel="stylesheet" href="jasmine/lib/jasmine-2.1.2/jasmine.css"> -->
 
