--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
 				<img id="cat-img" src="" alt="cute cat">
 			</div>
 		</span>
+		<div id="admin-box">
+			<button id="admin-btn">Admin</button>
+			<form action="/my-handling-form-page" method="post">
+				<div>
+					<label for="name">Name:</label>
+					<input type="text" id="name" name="cat_name">
+				</div>
+				<div>
+					<label for="url">Image URL:</label>
+					<input type="text" id="url" name="image-url">
+				</div>
+				<div>
+					<label for="clicks">Number of Clicks:</label>
+					<input type="num" id="clicks" name="num_clicks">
+				</div>
+				<div class="button">
+					<button type="submit">Submit</button>
+				</div>
+				<div class="button">
+					<button type="reset">Cancel</button>
+				</div>
+			</form>
+		</div>
 		<script src="js/app.js"></script>
 	</body>
 </html>
