Fix form element

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</span>
 		<div id="admin-box">
 			<button id="admin-btn">Admin</button>
-			<form action="/my-handling-form-page" method="post">
+			<form>
 				<div>
 					<label for="name">Name:</label>
 					<input type="text" id="name" name="cat_name">
