Fix class on form element

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</span>
 		<div id="admin-box">
 			<button id="admin-btn">Admin</button>
-			<form class="hideAdmin" id="admin-form">
+			<form class="" id="admin-form">
 				<div>
 					<label for="name">Name:</label>
 					<input type="text" id="name" name="cat_name">
@@ -44,10 +44,10 @@
 					<input type="num" id="clicks" name="num_clicks">
 				</div>
 				<div class="button">
-					<button type="submit">Submit</button>
+					<button id="admin-save" type="submit">Save</button>
 				</div>
 				<div class="button">
-					<button type="reset">Cancel</button>
+					<button id="admin-cancel" type="reset">Cancel</button>
 				</div>
 			</form>
 		</div>
